Added django and python

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1>Hojat Ghasemi</h1>
 
                 <p class="intro-position">
-                    <span>Mobile Application Developer</span>
+                    <span>Software Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -111,11 +111,10 @@
                             href="https://esperlos.ir/" style="color:blue">Esperlos</a>. <a
                             href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
                             style="color:blue">Game Hub</a> is the
-                    latest personal project he's developed and published to Google Play store. His current focus is on
+                    latest personal project he's developed and published to Google Play store. His current favorite
+                    stack is
                     <a href="https://kotlinlang.org/docs/multiplatform.html" style="color:blue">Kotlin
-                        Multiplatform</a> and <a
-                            href="https://www.mongodb.com/mern-stack"
-                            style="color:blue">MERN</a> for full stack development.</p>
+                        Multiplatform</a> (for the frontend) and Python Django for backend.</p>
             </div>
 
         </div>
@@ -161,6 +160,10 @@
                     <strong>Kotlin</strong>
                 </li>
                 <li>
+                    <div class="progress percent60"><span>60%</span></div>
+                    <strong>Python</strong>
+                </li>
+                <li>
                     <div class="progress percent80"><span>80%</span></div>
                     <strong>Git version control</strong>
                 </li>
@@ -183,6 +186,10 @@
                 <li>
                     <div class="progress percent40"><span>40%</span></div>
                     <strong>Koin</strong>
+                </li>
+                <li>
+                    <div class="progress percent40"><span>40%</span></div>
+                    <strong>Django</strong>
                 </li>
 
             </ul>
@@ -525,7 +532,7 @@
                     <h3>Hojat's preferred tech-stack</h3>
 
                     <p class="desc">
-                        Kotlin Multiplatform <br/> Realm DB <br/> Jetpack Compose + Swift UI <br/> MERN <br/>
+                        Kotlin Multiplatform <br/> Realm DB <br/> Jetpack Compose + Swift UI <br/> Django <br/> FastAPI
                     </p>
 
                 </div>
@@ -581,7 +588,7 @@
 
                     <h3>Interests</h3>
 
-                    <p class="desc"># Hiking # Video Games # Study
+                    <p class="desc"># Hiking # Video Games # CG arts
                     </p>
 
                 </div>
