updated cover letter

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
             <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_15_March_2023.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover_Letter_27_February_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover_Letter_15_March_2023.pdf"
                target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
         </div>
     </div>
@@ -280,6 +280,7 @@
                             <li>Laying out DI module of the app with Hilt</li>
                             <li>Migration from Java to Kotlin</li>
                             <li>Participated in creating UI of the app (XML)</li>
+                            <li>Adding RxJava Single API to data layer of the app</li>
                         </ul>
                     </div>
 
