--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     latest personal project he's developed and published to Google Play store. His current favorite
                     stack is
                     <a href="https://kotlinlang.org/docs/multiplatform.html" style="color:blue">Kotlin
-                        Multiplatform</a> (for the frontend) and Python Django for backend.</p>
+                        Multiplatform</a> (for the frontend) and Spring Boot for backend.</p>
             </div>
 
         </div>
@@ -140,7 +140,7 @@
                 </li>
                 <li>
                     <strong>Location:</strong>
-                    <span>Ontario, Canada</span>
+                    <span>Toronto, Canada</span>
                 </li>
             </ul>
             <!-- /info-list -->
@@ -176,20 +176,24 @@
                     <strong>Flow API</strong>
                 </li>
                 <li>
-                    <div class="progress percent50"><span>50%</span></div>
-                    <strong>Compose</strong>
+                    <div class="progress percent60"><span>60%</span></div>
+                    <strong>Jetpack Compose</strong>
                 </li>
                 <li>
                     <div class="progress percent40"><span>40%</span></div>
                     <strong>Hilt</strong>
                 </li>
                 <li>
-                    <div class="progress percent40"><span>40%</span></div>
+                    <div class="progress percent50"><span>50%</span></div>
                     <strong>Koin</strong>
                 </li>
                 <li>
-                    <div class="progress percent40"><span>40%</span></div>
-                    <strong>Django</strong>
+                    <div class="progress percent50"><span>50%</span></div>
+                    <strong>Ktor</strong>
+                </li>
+                <li>
+                    <div class="progress percent60"><span>60%</span></div>
+                    <strong>ML-Kit</strong>
                 </li>
 
             </ul>
@@ -533,7 +537,8 @@
                     <h3>Hojat's preferred tech-stack</h3>
 
                     <p class="desc">
-                        Kotlin Multiplatform <br/> Realm DB <br/> Jetpack Compose + Swift UI <br/> Django <br/> FastAPI
+                        Kotlin Multiplatform <br/> Realm DB <br/> Jetpack Compose + Swift UI <br/> Spring Boot <br/>
+                        Vaadin
                     </p>
 
                 </div>
@@ -658,7 +663,7 @@
             <h5>Location</h5>
 
             <p>
-                Sudbury<br> Ontario
+                Toronto<br> Ontario
                 <br> Canada
             </p>
 
