--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1>Hojat Ghasemi</h1>
 
                 <p class="intro-position">
-                    <span>Software Developer</span>
+                    <span>Mobile Application Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -206,9 +206,9 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_15_March_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_12_April_2023.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover_Letter_15_March_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover Letter_12_April_2023.pdf"
                target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
         </div>
     </div>
