--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
                     <strong>Kotlin</strong>
                 </li>
                 <li>
-                    <div class="progress percent60"><span>60%</span></div>
-                    <strong>Python</strong>
-                </li>
-                <li>
                     <div class="progress percent80"><span>80%</span></div>
                     <strong>Git version control</strong>
+                </li>
+                <li>
+                    <div class="progress percent70"><span>70%</span></div>
+                    <strong>ML-Kit</strong>
                 </li>
                 <li>
                     <div class="progress percent70"><span>70%</span></div>
@@ -180,10 +180,6 @@
                     <strong>Jetpack Compose</strong>
                 </li>
                 <li>
-                    <div class="progress percent40"><span>40%</span></div>
-                    <strong>Hilt</strong>
-                </li>
-                <li>
                     <div class="progress percent50"><span>50%</span></div>
                     <strong>Koin</strong>
                 </li>
@@ -192,8 +188,8 @@
                     <strong>Ktor</strong>
                 </li>
                 <li>
-                    <div class="progress percent60"><span>60%</span></div>
-                    <strong>ML-Kit</strong>
+                    <div class="progress percent40"><span>40%</span></div>
+                    <strong>Hilt</strong>
                 </li>
 
             </ul>
@@ -277,8 +273,8 @@
                         <h3>Android Engineer - <a
                                 href="https://esperlos.ir/">Esperlos</a> - (July 2017 - March 2019)</h3>
                         <p>
-                            Participated in design and development of various Android apps as part of esperlos mobile
-                            team. Some responsibilities:
+                            Participated in design and development of <b>Sahel Food</b> Android app. Some
+                            responsibilities:
                         <ul>
                             <li>Design, development, debugging, and maintenance of an E-commerce Android app</li>
                             <li>Laying out DI module of the app with Hilt</li>
@@ -413,6 +409,42 @@
                             <li>OkHttp + retrofit (for networking)</li>
                             <li>Junit + Truth + Turbine + Mockk (all for unit testing and mock testing)</li>
                         </ul>
+                    </div>
+
+                </div>
+                <!-- /timeline-block -->
+
+                <!--   Ml-Kit Demo -->
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+
+                    <div class="timeline-header">
+                        <h3><a href="https://github.com/hojat72elect/MLKitDemo">ML-Kit Demo</a></h3>
+                    </div>
+
+                    <div class="timeline-content">
+                        <p>
+                            This demo Android app is a collection of various Machine Learning techniques which work
+                            on-device with the help of <a href="https://developers.google.com/ml-kit">ML-Kit</a>
+                            library. Techniques covered in this demo app
+                            include but are not limited to:
+                        <ul>
+                            <li>Face mesh detection</li>
+                            <li>Text recognition</li>
+                            <li>Pose detection</li>
+                            <li>Selfie segmentation</li>
+                            <li>Object detection</li>
+                            <li>Barcode scanner</li>
+                            <li>Image labeling</li>
+                            <li> Face detection</li>
+                            <li> Live camera translator</li>
+                            <li>Digital ink recognition</li>
+                        </ul>
+
                     </div>
 
                 </div>
