--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     <span>Hojat Ghasemi</span>
                 </li>
                 <li>
-                    <strong>Date of birth:</strong>
-                    <span>1993-07-02</span>
+                    <strong>Visa status in Canada:</strong>
+                    <span>Open work permit</span>
                 </li>
                 <li>
                     <strong>Email:</strong>
