Updated cv and cover letter

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                             style="color:blue">Game Hub</a> is the
                     latest personal project he's developed and published to Google Play store. His current favorite
                     stack is
-                    <a href="https://kotlinlang.org/docs/multiplatform.html" style="color:blue">Kotlin
-                        Multiplatform</a> (for the frontend) and Spring Boot for backend.</p>
+                    <a href="" style="color:blue">React Native</a>, <a href="" style="color:blue">Kotlin Multiplatform
+                        Mobile</a>, and <a href="" style="color:blue">Flutter</a> (for the
+                    frontend) and Spring Boot for backend.</p>
             </div>
 
         </div>
@@ -202,7 +203,7 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_12_April_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_9_May_2023.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
             <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover Letter_12_April_2023.pdf"
                target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
@@ -233,7 +234,7 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Android Developer Intern - <a href="https://www.karglobal.com/">KAR Global</a> - (June 2022
+                        <h3>Android Developer - <a href="https://www.karglobal.com/">KAR Global</a> - (June 2022
                             - September 2022)</h3>
                         <p>Participated in maintenance and development of <a
                                 href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en">TradeRev
@@ -569,8 +570,8 @@
                     <h3>Hojat's preferred tech-stack</h3>
 
                     <p class="desc">
-                        Kotlin Multiplatform <br/> Realm DB <br/> Jetpack Compose + Swift UI <br/> Spring Boot <br/>
-                        Vaadin
+                        Kotlin Multiplatform <br/> PostgreSQL <br/> Jetpack Compose + Swift UI <br/> Spring Boot <br/>
+                        Flutter
                     </p>
 
                 </div>
@@ -695,7 +696,7 @@
             <h5>Location</h5>
 
             <p>
-                Toronto<br> Ontario
+                Sudbury<br> Ontario
                 <br> Canada
             </p>
 
@@ -724,7 +725,7 @@
 
             <h5>or Call Me At</h5>
 
-            <p>Phone: 437 332 0253<br>
+            <p>Phone:+1 437 332 0253<br>
 
             </p>
 
