--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </div>
 
     <div class="row button-section">
-        <div class="col-twelve">
+        <div class="key-holder">
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
             <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_7th_June_2023.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
