--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1>Hojat Ghasemi</h1>
 
                 <p class="intro-position">
-                    <span>Mobile Application Developer</span>
+                    <span>Front-end Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -141,7 +141,7 @@
                 </li>
                 <li>
                     <strong>Location:</strong>
-                    <span>Toronto, Canada</span>
+                    <span>Sudbury, Ontario, Canada</span>
                 </li>
             </ul>
             <!-- /info-list -->
@@ -153,44 +153,44 @@
 
             <ul class="skill-bars">
                 <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>Java</strong>
+                    <div class="progress"><span>80%</span></div>
+                    <strong>Android</strong>
                 </li>
                 <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>Kotlin</strong>
-                </li>
-                <li>
-                    <div class="progress percent80"><span>80%</span></div>
-                    <strong>Git version control</strong>
-                </li>
-                <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>ML-Kit</strong>
-                </li>
-                <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>Android Room</strong>
-                </li>
-                <li>
-                    <div class="progress percent60"><span>60%</span></div>
-                    <strong>Flow API</strong>
-                </li>
-                <li>
-                    <div class="progress percent60"><span>60%</span></div>
+                    <div class="progress"><span>70%</span></div>
                     <strong>Jetpack Compose</strong>
                 </li>
                 <li>
-                    <div class="progress percent50"><span>50%</span></div>
-                    <strong>Koin</strong>
+                    <div class="progress"><span>70%</span></div>
+                    <strong>Kotlin Flow API</strong>
                 </li>
                 <li>
-                    <div class="progress percent50"><span>50%</span></div>
-                    <strong>Ktor</strong>
+                    <div class="progress"><span>70%</span></div>
+                    <strong>Room Database</strong>
                 </li>
                 <li>
-                    <div class="progress percent40"><span>40%</span></div>
-                    <strong>Hilt</strong>
+                    <div class="progress"><span>20%</span></div>
+                    <strong>Jest</strong>
+                </li>
+                <li>
+                    <div class="progress"><span>20%</span></div>
+                    <strong>TailwindCSS</strong>
+                </li>
+                <li>
+                    <div class="progress"><span>60%</span></div>
+                    <strong>React</strong>
+                </li>
+                <li>
+                    <div class="progress"><span>50%</span></div>
+                    <strong>Ionic</strong>
+                </li>
+                <li>
+                    <div class="progress"><span>50%</span></div>
+                    <strong>Angular</strong>
+                </li>
+                <li>
+                    <div class="progress"><span>40%</span></div>
+                    <strong>Saas</strong>
                 </li>
 
             </ul>
