--- a/index.html
+++ b/index.html
@@ -105,17 +105,18 @@
 
                 <img src="images/Hojat.png" alt="Profile Picture">
 
-                <p class="lead">Hojat is a professional mobile app developer with several years of experience in various
-                    companies such as <a
-                            href="https://www.karglobal.com/" style="color:blue">KAR Global</a> and <a
-                            href="https://esperlos.ir/" style="color:blue">Esperlos</a>. <a
-                            href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews"
-                            style="color:blue">Game Hub</a> is the
-                    latest personal project he's developed and published to Google Play store. His current favorite
-                    stack is
-                    <a href="" style="color:blue">React Native</a>, <a href="" style="color:blue">Kotlin Multiplatform
-                        Mobile</a>, and <a href="" style="color:blue">Flutter</a> (for the
-                    frontend) and Spring Boot for backend.</p>
+                <p class="lead">Hojat is a front-end developer with a few years of professional experience as native
+                    Android developer in <a
+                            href="https://www.traderev.com/en-ca/" style="color:blue">TradeRev</a> and <a
+                            href="https://esperlos.ir/" style="color:blue">Esperlos</a>. Currently, his main focus is on
+                    React, Angular and Ionic frameworks. <a href="https://github.com/hojat72elect/GameHub"
+                                                            style="color:blue">GameHub</a>,
+                    <a href="https://github.com/hojat72elect/MovieFinder"
+                       style="color:blue">Movie Finder</a>, and <a
+                            href="https://github.com/hojat72elect/photo_finder"
+                            style="color:blue">Photo
+                        Finder</a> are the
+                    latest big personal projects he has been working on.</p>
             </div>
 
         </div>
@@ -234,7 +235,7 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Android Developer - <a href="https://www.karglobal.com/">KAR Global</a> - (June 2022
+                        <h3>Android Developer - <a href="https://www.traderev.com/en-ca/">TradeRev</a> - (June 2022
                             - September 2022)</h3>
                         <p>Participated in maintenance and development of <a
                                 href="https://play.google.com/store/apps/details?id=com.nthgensoftware.traderev.android&hl=en">TradeRev
@@ -389,13 +390,13 @@
 
 
                     <div class="timeline-header">
-                        <h3><a href="https://play.google.com/store/apps/details?id=ca.on.hojat.gamenews">Game Hub</a>
+                        <h3><a href="https://github.com/hojat72elect/GameHub">Game Hub</a>
                         </h3>
                     </div>
 
                     <div class="timeline-content">
                         <p>
-                            This is a native Android app which connects to <a href="https://api-docs.igdb.com/">IGDB</a>
+                            A native Android app which connects to <a href="https://api-docs.igdb.com/">IGDB</a>
                             and
                             <a href="https://www.gamespot.com/api/">GameSpot</a> APIs
                             for viewing all the latest news about video games. Some technologies I used in
@@ -415,7 +416,7 @@
                 </div>
                 <!-- /timeline-block -->
 
-                <!--   Ml-Kit Demo -->
+                <!--   Movie Finder -->
                 <div class="timeline-block">
 
                     <div class="timeline-ico">
@@ -424,26 +425,21 @@
 
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/MLKitDemo">ML-Kit Demo</a></h3>
+                        <h3><a href="https://github.com/hojat72elect/MovieFinder">Movie Finder</a></h3>
                     </div>
 
                     <div class="timeline-content">
                         <p>
-                            This demo Android app is a collection of various Machine Learning techniques which work
-                            on-device with the help of <a href="https://developers.google.com/ml-kit">ML-Kit</a>
-                            library. Techniques covered in this demo app
-                            include but are not limited to:
+                            An Ionic + Angular multiplatform app (web, android, and iOS) for connecting to <a
+                                href="https://developer.themoviedb.org/reference/intro/getting-started">TMDB</a> API and
+                            fetching all the latest news and information about released movies. Some of the technologies
+                            used in this project are:
                         <ul>
-                            <li>Face mesh detection</li>
-                            <li>Text recognition</li>
-                            <li>Pose detection</li>
-                            <li>Selfie segmentation</li>
-                            <li>Object detection</li>
-                            <li>Barcode scanner</li>
-                            <li>Image labeling</li>
-                            <li> Face detection</li>
-                            <li> Live camera translator</li>
-                            <li>Digital ink recognition</li>
+                            <li>Angular</li>
+                            <li>Ionic</li>
+                            <li>Capacitor JS</li>
+                            <li>TypeScript</li>
+                            <li>Saas</li>
                         </ul>
 
                     </div>
@@ -451,7 +447,7 @@
                 </div>
                 <!-- /timeline-block -->
 
-                <!--     Smart Gallery -->
+                <!--     Photo Finder -->
                 <div class="timeline-block">
 
                     <div class="timeline-ico">
@@ -460,72 +456,21 @@
 
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/Smart-Gallery">Smart Gallery</a></h3>
+                        <h3><a href="https://github.com/hojat72elect/photo_finder">Photo Finder</a></h3>
                     </div>
 
                     <div class="timeline-content">
                         <p>
-                            This is an offline, feature-rich native Android gallery that supports various file formats
-                            such as SVG, GIF, in addition to common file formats supported by android system. I'm trying
-                            to implement these technologies in this personal project:
+                            This is a React app for connecting to various online APIs and search for users' desired
+                            photos. It also allows users to sign in and comment on photos. Some of the most important
+                            technologies used in this app :
                         <ul>
-                            <li>Room persistence library</li>
-                            <li>MVVM architecture</li>
-                            <li>ViewModel</li>
-                            <li>DataBinding</li>
-                            <li>StateFlow and SharedFlow</li>
-                            <li>Navigation component</li>
+                            <li>React</li>
+                            <li>Cloud Firestore</li>
+                            <li>React Firebase hooks</li>
+                            <li>TailwindCSS</li>
                         </ul>
 
-                    </div>
-
-                </div>
-                <!-- /timeline-block -->
-
-                <!--     Notify Plus -->
-                <div class="timeline-block">
-
-                    <div class="timeline-ico">
-                        <i class="fa fa-briefcase"></i>
-                    </div>
-
-                    <div class="timeline-header">
-                        <h3>
-                            <a href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">Notify
-                                Plus</a></h3>
-                    </div>
-
-                    <div class="timeline-content">
-
-                        <p>Notify Plus is a feature-rich tool box that makes your Android experience
-                            even more fun! The
-                            app provides you with 2 main tools:</p>
-                        <ol>
-                            <li>A sticky notification containing 8 modifiable shortcuts to user's
-                                favorite apps.
-                            </li>
-                            <li>A floating widget which can work as an equivalent of floating
-                                control center in
-                                iOS.
-                            </li>
-                        </ol>
-                        <p>Apart from all the fun, the most important experiences I took from this
-                            project were
-                            these:</p>
-                        <ol>
-                            <li>Google Play Store publishing process.</li>
-                            <li>Git Version Control.</li>
-                            <li>
-                                <a href="https://developer.android.com/reference/kotlin/android/widget/RemoteViews">RemoteViews</a>
-                                in Android.
-                            </li>
-                            <li>Sticky notifications in Android.</li>
-                            <li>GUI control via services.</li>
-                            <li>Usage of 3rd party libraries via Gradle dependencies.</li>
-                        </ol>
-                        <p>This app was published to Google Play Store in <a
-                                href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">here</a>.
-                        </p>
                     </div>
 
                 </div>
@@ -570,8 +515,7 @@
                     <h3>Hojat's preferred tech-stack</h3>
 
                     <p class="desc">
-                        Kotlin Multiplatform <br/> PostgreSQL <br/> Jetpack Compose + Swift UI <br/> Spring Boot <br/>
-                        Flutter
+                        React Native <br/> Next JS <br/> Firebase SDK <br/> Electron JS <br/>
                     </p>
 
                 </div>
