--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1>Hojat Ghasemi</h1>
 
                 <p class="intro-position">
-                    <span>Front-end Developer</span>
+                    <span>Mobile App Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -105,18 +105,13 @@
 
                 <img src="images/Hojat.png" alt="Profile Picture">
 
-                <p class="lead">Hojat is a front-end developer with a few years of professional experience as native
-                    Android developer in <a
+                <p class="lead">Hojat is a mobile app developer with a few years of professional experience as native
+                    Android developer in <a href="https://ontab.com/" style="color:blue">ONTAB</a>, <a
                             href="https://www.traderev.com/en-ca/" style="color:blue">TradeRev</a> and <a
                             href="https://esperlos.ir/" style="color:blue">Esperlos</a>. Currently, his main focus is on
-                    React, Angular and Ionic frameworks. <a href="https://github.com/hojat72elect/GameHub"
-                                                            style="color:blue">GameHub</a>,
-                    <a href="https://github.com/hojat72elect/MovieFinder"
-                       style="color:blue">Movie Finder</a>, and <a
-                            href="https://github.com/hojat72elect/photo_finder"
-                            style="color:blue">Photo
-                        Finder</a> are the
-                    latest big personal projects he has been working on.</p>
+                    React Native framework. <a href="https://github.com/hojat72elect/GameHub"
+                                               style="color:blue">GameHub</a> is the
+                    latest big personal projects he's been working on.</p>
             </div>
 
         </div>
@@ -142,7 +137,7 @@
                 </li>
                 <li>
                     <strong>Location:</strong>
-                    <span>Sudbury, Ontario, Canada</span>
+                    <span>Toronto, Canada</span>
                 </li>
             </ul>
             <!-- /info-list -->
@@ -163,11 +158,7 @@
                 </li>
                 <li>
                     <div class="progress"><span>70%</span></div>
-                    <strong>Kotlin Flow API</strong>
-                </li>
-                <li>
-                    <div class="progress"><span>70%</span></div>
-                    <strong>Room Database</strong>
+                    <strong>React Native</strong>
                 </li>
                 <li>
                     <div class="progress"><span>20%</span></div>
@@ -185,14 +176,7 @@
                     <div class="progress"><span>10%</span></div>
                     <strong>Ionic</strong>
                 </li>
-                <li>
-                    <div class="progress"><span>10%</span></div>
-                    <strong>Angular</strong>
-                </li>
-                <li>
-                    <div class="progress"><span>5%</span></div>
-                    <strong>Saas</strong>
-                </li>
+
 
             </ul>
             <!-- /skill-bars -->
@@ -204,9 +188,9 @@
     <div class="row button-section">
         <div class="key-holder">
             <a href="#contact" title="Hire Me" class="button">Hire me</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_7th_June_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_for_programming_jobs_Hojat_Ghasemi.pdf"
                target="_blank" title="Download CV" class="button">CV</a>
-            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover Letter_7_June_2023.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Cover_Letter_Hojat_Ghasemi.pdf"
                target="_blank" title="Read Cover letter" class="button">COVER LETTER</a>
         </div>
     </div>
@@ -227,6 +211,32 @@
         <div class="col-twelve">
 
             <div class="timeline-wrap">
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>Senior Android Developer - <a href="https://ontab.com/">ONTAB</a> - (September 2023
+                            - November 2023)</h3>
+                        <p>
+                            Led the development process of a native Android point-of-sale application for payment
+                            services. Some of the technologies used in this project:
+                        </p>
+                        <ul>
+                            <li>Jetpack Compose</li>
+                            <li>OkHttp</li>
+                            <li>Retrofit</li>
+                            <li>Hilt</li>
+
+
+                        </ul>
+                    </div>
+
+                </div>
+                <!-- /timeline-block -->
 
                 <div class="timeline-block">
 
@@ -640,13 +650,12 @@
             <h5>Location</h5>
 
             <p>
-                Sudbury<br> Ontario
-                <br> Canada
+                Toronto<br>Canada
             </p>
 
         </div>
 
-        <div class="col-four tab-full collapse">
+        <div class="col-six tab-full ">
 
             <div class="icon">
                 <i class="icon-mail"></i>
@@ -654,24 +663,7 @@
 
             <h5>Preferred way of connection</h5>
 
-            <p>hojat72elect@gmail.com
-
-
-            </p>
-
-        </div>
-
-        <div class="col-four tab-full">
-
-            <div class="icon">
-                <i class="icon-phone"></i>
-            </div>
-
-            <h5>or Call Me At</h5>
-
-            <p>Phone:+1 437 332 0253<br>
-
-            </p>
+            <p>hojat72elect@gmail.com</p>
 
         </div>
 
