--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                             <li>OkHttp</li>
                             <li>Retrofit</li>
                             <li>Hilt</li>
+                            <li>kotlinx serialization</li>
 
 
                         </ul>
